fixing spacing and styling

--- a/assets/stylus/components/buttons.styl
+++ b/assets/stylus/components/buttons.styl
@@ -107,7 +107,7 @@ action_button()
 			background complement($link-hover-color)	
 
 
-.Button-max-width--40-80
-	max-width 40%
+.Button-max-width--50-100
+	max-width 50%
 	@media $break-767
-		max-width 80%
+		max-width 100%
